syntax = "proto3";

package ocis.messages.search.v0;

option go_package = "github.com/owncloud/ocis/protogen/gen/ocis/messages/search/v0";

message ResourceID {
	string storage_id = 1;
	string opaque_id = 2;
}

message Reference {
	ResourceID resource_id = 1;
	string path = 2;
}

message Entity {
	Reference ref = 1;
	ResourceID id = 2;
	string name = 3;
	int64 size = 4;
}

message Match {
	// the matched entity
	Entity entity = 1;
	// the match score
	float score = 2;
}